--- a/_posts/2020-03-04-win10-vpn-720-error.md
+++ b/_posts/2020-03-04-win10-vpn-720-error.md
@@ -22,19 +22,26 @@ toc: true
 ## 关于L2TP错误的解决办法
 
 由于这个问题通过微软官方论坛给出的方案已解决，在这里就不多加阐述，直接套用官方解决办法：
-> 关于l2tp连接尝试失败 因为安全层在初始化，且出现ERROR789的问题，这边目前可以提供给您的方案只有一个，您可以尝试执行操作一下。
-> 方法如下：
+
+> 关于l2tp连接尝试失败 因为安全层在初始化，且出现ERROR789的问题，这边目前可以提供给您的方案只有一个，您可以尝试执行操作一下。 方法如下：
+>
 > 1 确保IPsec Policy Agent服务已启动
+>
 > 2 确保路由和远程访问（Routing and Remote Access）和远程访问连接管理器服务（Remote Access Connection Manager）启动
+>
 > ***（注：1，2两项服务的打开方式，可直接通过小娜打开“服务”这个应用后，进行搜索）***
+>
 > 3 注册表添加 ProhibitIpSec 注册表项
 > 注册表路径HKEY_LOCAL_MACHINE\System\CurrentControlSet\Services\Rasman\Parameters
 > 创建ProhibitIpSec注册表项，选择DWORD类型并将其设置为 1 的值
+>
 > 4 注册表添加 AllowL2TPWeakCrypto 注册表项 
 > 注册表路径HKEY_LOCAL_MACHINE\System\CurrentControlSet\Services\Rasman\Parameters
 > 创建 AllowL2TPWeakCrypto 注册表项，选择DWORD类型并将其设置为 1 的值
+>
 > 5 重启计算机
-> 注意：由于需要修改到注册表信息，在修改之前请务必备份原注册表信息以便恢复。
+>
+> ***注意：由于需要修改到注册表信息，在修改之前请务必备份原注册表信息以便恢复。***
 
 
 
